force-app/main/default/objects/Payroll_Date__c/Payroll_Date__c.object-meta.xml
<CustomObject>
    <label>Payroll Date</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Payroll Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>