force-app/main/default/objects/Payroll_Date__c/fields/Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Account_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Product</label>
    <referenceTo>Account_Product__c</referenceTo>
    <relationshipLabel>Payroll Dates</relationshipLabel>
    <relationshipName>Payroll_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>