force-app/main/default/objects/Payroll_Date__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payroll Dates</relationshipLabel>
    <relationshipName>Payroll_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>