force-app/main/default/objects/Payroll_Date__c/fields/payroll_not_needed__c.field-meta.xml
<CustomField>
    <fullName>payroll_not_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Not Needed</label>
    <type>Checkbox</type>
</CustomField>