force-app/main/default/objects/Payroll_Date__c/fields/Payroll_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Process_Date__c</fullName>
    <label>Payroll Payment Date</label>
    <type>Date</type>
</CustomField>