force-app/main/default/objects/Payroll_Date__c/validationRules/Not_Process_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Process_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 payroll_not_needed__c = True, 
(ISBLANK( Reason__c  )) 
)</errorConditionFormula>
    <errorMessage>Enter reason for not processing payment</errorMessage>
</ValidationRule>